# COMP3331-Assign

./: .gitignore  meson.build  meson.sh  readme.md  todo.md
src/: Makefile  meson.build
src/client/: client.c  client.h  meson.build  p2pConnections.c  p2pConnections.h
src/common/: constants.h  helpers.c  helpers.h  linkedlist.c  linkedlist.h  meson.build  protocol.c  protocol.h
src/server/: blockedusers.c  clients.c  clients.h  commands.c  commands.h  meson.build  message.c  message.h  server.c  server.h  serverClients.c  serverClients.h  serverPrivate.h  user.c  user.h  welcome.txt
src/server/user/: blockedusers.h  message.c  message.h  user.c  user.h
